--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # sqflite
   sqflite: ^2.0.0+3
 
+  # HTTP
+  http: ^1.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
