--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
-  # sqflite
   sqflite: ^2.0.0+3
-
-  # HTTP
   http: ^1.2.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
