--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   http: ^1.2.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  # camera: ^0.10.5+9
+  # path_provider: ^2.1.2
+  # path: ^1.8.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
