--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # path_provider: ^2.1.2
   # path: ^1.8.3
   image_picker: ^1.0.7
+  # flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
